--- a/demo_acc.vcxproj
+++ b/demo_acc.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{84a8da64-40b8-47c6-933b-76ca4dc0b24b}</ProjectGuid>
     <RootNamespace>demoacc</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>demo_acc</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="demo_acc.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="map_from_rbtree.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="map_from_rbtree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
